--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,9 @@ body {
 .panel {
   border-radius: 0;
   border: none; }
+  .panel h2 {
+    padding-top: 0;
+    margin-top: 0; }
 
 .btn {
   border-radius: 0;
@@ -27,7 +30,7 @@ body {
     font-size: 36px;
     margin-top: 50px; }
   .jumbotron .jumbotron-overlay {
-    background-color: rgba(0, 0, 0, 0.6);
+    background-color: rgba(53, 64, 82, 0.95);
     disaply: block;
     height: 100%;
     width: 100%;
@@ -36,24 +39,41 @@ body {
     color: white; }
 
 section {
-  padding: 100px 0; }
+  padding: 70px 0; }
+  section p, section li, section h1, section h2, section h3, section h5, section h6 {
+    color: rgba(0, 0, 0, 0.5) !important; }
+  section h1 {
+    font-size: 36px;
+    font-weight: 400;
+    margin-top: 0; }
+  section h2 {
+    font-size: 28px; }
+  section h4 {
+    color: #41AFFA; }
+  section p {
+    font-size: 14px;
+    line-height: 1.7em; }
 
 section.top-features img {
   box-shadow: 0 15px 20px 5px rgba(0, 0, 0, 0.25); }
 
 section.cta {
-  background-color: #ccc; }
+  background-color: rgba(0, 0, 0, 0.05); }
   section.cta .row > div {
     text-align: center; }
 
+section.benefits .row:nth-child(2) {
+  text-align: center; }
+
 section.features {
-  background-color: #ccc; }
+  background-color: rgba(0, 0, 0, 0.05); }
 
 section.screenshots {
   text-align: center; }
 
 section.final-call {
-  background-color: #ccc; }
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.05); }
 
 footer {
   background-color: #354052; }
