--- a/css/styles.scss
+++ b/css/styles.scss
@@ -165,7 +165,12 @@ footer{
 
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
-	.jumbotron{height:450px; text-align: center}
+	.jumbotron{height:450px; text-align: center;
+
+		h1{
+			margin-top:100px !important;
+		}
+	}
 	.logo{margin:0 auto !important;}
 }
 
@@ -174,6 +179,9 @@ footer{
 .jumbotron{
 		text-align: left;
 		height:600px;
+		h1{
+			margin-top:250px !important;
+		}
 	}
 	.logo{margin-left:0 !important;}
 }
@@ -183,7 +191,12 @@ footer{
 .jumbotron{
 		text-align: left;
 		.logo{margin-left:0 !important;}
+		h1{
+			margin-top:250px !important;
+		}
 	}
+
+	
 
 	
 }
