--- a/css/styles.scss
+++ b/css/styles.scss
@@ -38,6 +38,7 @@ body	{
 	padding:0;
 	background-position:fixed;
 	text-align: center;
+	margin-bottom: 0;
 
 	.logo	{
 	max-width:250px;
@@ -47,7 +48,7 @@ body	{
 	h1{
 		font-weight:100;
 		font-size:36px;
-		margin-top:50px;
+		
 	}
 
 	.jumbotron-overlay{
@@ -56,6 +57,17 @@ body	{
 		height:100%;
 		width:100%;
 		padding-top:50px;
+		position: relative;
+			
+			.center-align-content{
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate( -50%, -50%);
+			}
+		
+
+		
 	}
 
 	h1, p, hr{
@@ -167,9 +179,7 @@ footer{
 @media (min-width: 768px) { 
 	.jumbotron{height:450px; text-align: center;
 
-		h1{
-			margin-top:100px !important;
-		}
+		
 	}
 	.logo{margin:0 auto !important;}
 }
@@ -177,11 +187,9 @@ footer{
 /* Medium devices (desktops, 992px and up) */
 @media (min-width: 992px)  { 
 .jumbotron{
-		text-align: left;
+		
 		height:600px;
-		h1{
-			margin-top:250px !important;
-		}
+		
 	}
 	.logo{margin-left:0 !important;}
 }
@@ -189,11 +197,9 @@ footer{
 /* Large devices (large desktops, 1200px and up) */
 @media (min-width: 1200px ) { 
 .jumbotron{
-		text-align: left;
+		
 		.logo{margin-left:0 !important;}
-		h1{
-			margin-top:250px !important;
-		}
+		
 	}
 
 	
